new/icon/cmp/tran/y.output

state 0
	$accept : _program $end 
	decls : _    (2)

	error  shift 3
	.  reduce 2

	program  goto 1
	decls  goto 2

state 1
	$accept :  program_$end 

	$end  accept
	.  error


state 2
	program :  decls_EOFX 
	decls :  decls_decl 

	EOFX  shift 4
	EXTERNAL  shift 12
	GLOBAL  shift 11
	PROCEDURE  shift 13
	RECORD  shift 9
	.  error

	decl  goto 5
	record  goto 6
	proc  goto 7
	global  goto 8
	prochead  goto 10

state 3
	program :  error_decls EOFX 
	decls : _    (2)

	.  reduce 2

	decls  goto 14

state 4
	program :  decls EOFX_    (1)

	.  reduce 1


state 5
	decls :  decls decl_    (3)

	.  reduce 3


state 6
	decl :  record_    (4)

	.  reduce 4


state 7
	decl :  proc_    (5)

	.  reduce 5


state 8
	decl :  global_    (6)

	.  reduce 6


state 9
	record :  RECORD_$$11 IDENT LPAREN arglist RPAREN 
	$$11 : _    (11)

	.  reduce 11

	$$11  goto 15

state 10
	proc :  prochead_SEMICOL locals initial procbody END 
	proc :  prochead_error procbody END 

	error  shift 17
	SEMICOL  shift 16
	.  error


state 11
	global :  GLOBAL_$$7 idlist 
	$$7 : _    (7)

	.  reduce 7

	$$7  goto 18

state 12
	global :  EXTERNAL_$$9 idlist 
	$$9 : _    (9)

	.  reduce 9

	$$9  goto 19

state 13
	prochead :  PROCEDURE_$$14 IDENT LPAREN arglist RPAREN 
	$$14 : _    (14)

	.  reduce 14

	$$14  goto 20

state 14
	decls :  decls_decl 
	program :  error decls_EOFX 

	EOFX  shift 21
	EXTERNAL  shift 12
	GLOBAL  shift 11
	PROCEDURE  shift 13
	RECORD  shift 9
	.  error

	decl  goto 5
	record  goto 6
	proc  goto 7
	global  goto 8
	prochead  goto 10

state 15
	record :  RECORD $$11_IDENT LPAREN arglist RPAREN 

	IDENT  shift 22
	.  error


state 16
	proc :  prochead SEMICOL_locals initial procbody END 
	locals : _    (20)

	.  reduce 20

	locals  goto 23

state 17
	proc :  prochead error_procbody END 
	procbody : _    (27)
	nexpr : _    (29)

	error  shift 28
	CSETLIT  shift 85
	IDENT  shift 56
	INTLIT  shift 82
	REALLIT  shift 83
	STRINGLIT  shift 84
	BREAK  shift 58
	CASE  shift 90
	CREATE  shift 55
	EVERY  shift 93
	FAIL  shift 86
	IF  shift 89
	NEXT  shift 57
	NOT  shift 41
	REPEAT  shift 94
	RETURN  shift 87
	SUSPEND  shift 88
	UNTIL  shift 92
	WHILE  shift 91
	AT  shift 40
	BACKSLASH  shift 81
	BANG  shift 64
	BAR  shift 42
	CARET  shift 69
	CONCAT  shift 43
	CONJUNC  shift 62
	DIFF  shift 65
	DOT  shift 63
	EQUIV  shift 77
	INTER  shift 70
	LBRACE  shift 60
	LBRACK  shift 61
	LCONCAT  shift 44
	LEXEQ  shift 75
	LEXNE  shift 76
	LPAREN  shift 59
	MINUS  shift 72
	NOTEQUIV  shift 80
	NUMEQ  shift 73
	NUMNE  shift 74
	PLUS  shift 66
	QMARK  shift 79
	SEMICOL  reduce 29
	SLASH  shift 68
	STAR  shift 67
	TILDE  shift 71
	UNION  shift 78
	.  reduce 27

	procbody  goto 24
	expr  goto 26
	nexpr  goto 25
	expr1a  goto 27
	expr1  goto 29
	expr2  goto 30
	expr3  goto 31
	expr4  goto 32
	expr5  goto 33
	expr6  goto 34
	expr7  goto 35
	expr8  goto 36
	expr9  goto 37
	expr10  goto 38
	expr11  goto 39
	op10  goto 45
	literal  goto 46
	section  goto 47
	return  goto 48
	if  goto 49
	case  goto 50
	while  goto 51
	until  goto 52
	every  goto 53
	repeat  goto 54

state 18
	global :  GLOBAL $$7_idlist 

	IDENT  shift 96
	.  error

	idlist  goto 95

state 19
	global :  EXTERNAL $$9_idlist 

	IDENT  shift 96
	.  error

	idlist  goto 97

state 20
	prochead :  PROCEDURE $$14_IDENT LPAREN arglist RPAREN 

	IDENT  shift 98
	.  error


state 21
	program :  error decls EOFX_    (197)

	.  reduce 197


state 22
	record :  RECORD $$11 IDENT_LPAREN arglist RPAREN 

	LPAREN  shift 99
	.  error


state 23
	proc :  prochead SEMICOL locals_initial procbody END 
	locals :  locals_retention idlist SEMICOL 
	initial : _    (25)

	DYNAMIC  shift 105
	INITIAL  shift 102
	LOCAL  shift 103
	STATIC  shift 104
	.  reduce 25

	initial  goto 100
	retention  goto 101

state 24
	proc :  prochead error procbody_END 

	END  shift 106
	.  error


state 25
	procbody :  nexpr_SEMICOL procbody 

	SEMICOL  shift 107
	.  error


26: shift/reduce conflict (shift 108, red'n 30) on CONJUNC
state 26
	nexpr :  expr_    (30)
	expr :  expr_CONJUNC expr1a 

	CONJUNC  shift 108
	.  reduce 30


27: shift/reduce conflict (shift 109, red'n 31) on QMARK
state 27
	expr :  expr1a_    (31)
	expr1a :  expr1a_QMARK expr1 

	QMARK  shift 109
	.  reduce 31


state 28
	expr :  error_    (199)

	.  reduce 199


state 29
	expr1a :  expr1_    (33)

	.  reduce 33


30: shift/reduce conflict (shift 115, red'n 35) on TO
30: shift/reduce conflict (shift 117, red'n 35) on ASSIGN
30: shift/reduce conflict (shift 114, red'n 35) on AUGACT
30: shift/reduce conflict (shift 113, red'n 35) on AUGAND
30: shift/reduce conflict (shift 131, red'n 35) on AUGEQ
30: shift/reduce conflict (shift 132, red'n 35) on AUGEQV
30: shift/reduce conflict (shift 133, red'n 35) on AUGGE
30: shift/reduce conflict (shift 134, red'n 35) on AUGGT
30: shift/reduce conflict (shift 135, red'n 35) on AUGLE
30: shift/reduce conflict (shift 136, red'n 35) on AUGLT
30: shift/reduce conflict (shift 137, red'n 35) on AUGNE
30: shift/reduce conflict (shift 138, red'n 35) on AUGNEQV
30: shift/reduce conflict (shift 139, red'n 35) on AUGSEQ
30: shift/reduce conflict (shift 140, red'n 35) on AUGSGE
30: shift/reduce conflict (shift 141, red'n 35) on AUGSGT
30: shift/reduce conflict (shift 142, red'n 35) on AUGSLE
30: shift/reduce conflict (shift 143, red'n 35) on AUGSLT
30: shift/reduce conflict (shift 144, red'n 35) on AUGSNE
30: shift/reduce conflict (shift 130, red'n 35) on CARETASGN
30: shift/reduce conflict (shift 120, red'n 35) on CONCATASGN
30: shift/reduce conflict (shift 122, red'n 35) on DIFFASGN
30: shift/reduce conflict (shift 127, red'n 35) on INTERASGN
30: shift/reduce conflict (shift 121, red'n 35) on LCONCATASGN
30: shift/reduce conflict (shift 125, red'n 35) on MINUSASGN
30: shift/reduce conflict (shift 129, red'n 35) on MODASGN
30: shift/reduce conflict (shift 124, red'n 35) on PLUSASGN
30: shift/reduce conflict (shift 119, red'n 35) on REVASSIGN
30: shift/reduce conflict (shift 118, red'n 35) on REVSWAP
30: shift/reduce conflict (shift 112, red'n 35) on SCANASGN
30: shift/reduce conflict (shift 128, red'n 35) on SLASHASGN
30: shift/reduce conflict (shift 126, red'n 35) on STARASGN
30: shift/reduce conflict (shift 116, red'n 35) on SWAP
30: shift/reduce conflict (shift 123, red'n 35) on UNIONASGN
state 30
	expr1 :  expr2_    (35)
	expr1 :  expr2_op1 expr1 
	expr1 :  expr2_op1a expr1 
	expr1 :  expr2_SCANASGN expr1 
	expr1 :  expr2_AUGAND expr1 
	expr1 :  expr2_AUGACT expr1 
	expr2 :  expr2_TO expr3 
	expr2 :  expr2_TO expr3 BY expr3 

	TO  shift 115
	ASSIGN  shift 117
	AUGACT  shift 114
	AUGAND  shift 113
	AUGEQ  shift 131
	AUGEQV  shift 132
	AUGGE  shift 133
	AUGGT  shift 134
	AUGLE  shift 135
	AUGLT  shift 136
	AUGNE  shift 137
	AUGNEQV  shift 138
	AUGSEQ  shift 139
	AUGSGE  shift 140
	AUGSGT  shift 141
	AUGSLE  shift 142
	AUGSLT  shift 143
	AUGSNE  shift 144
	CARETASGN  shift 130
	CONCATASGN  shift 120
	DIFFASGN  shift 122
	INTERASGN  shift 127
	LCONCATASGN  shift 121
	MINUSASGN  shift 125
	MODASGN  shift 129
	PLUSASGN  shift 124
	REVASSIGN  shift 119
	REVSWAP  shift 118
	SCANASGN  shift 112
	SLASHASGN  shift 128
	STARASGN  shift 126
	SWAP  shift 116
	UNIONASGN  shift 123
	.  reduce 35

	op1  goto 110
	op1a  goto 111

state 31
	expr2 :  expr3_    (70)

	.  reduce 70


32: shift/reduce conflict (shift 145, red'n 73) on BAR
32: shift/reduce conflict (shift 159, red'n 73) on EQUIV
32: shift/reduce conflict (shift 147, red'n 73) on LEXEQ
32: shift/reduce conflict (shift 148, red'n 73) on LEXGE
32: shift/reduce conflict (shift 149, red'n 73) on LEXGT
32: shift/reduce conflict (shift 150, red'n 73) on LEXLE
32: shift/reduce conflict (shift 151, red'n 73) on LEXLT
32: shift/reduce conflict (shift 152, red'n 73) on LEXNE
32: shift/reduce conflict (shift 160, red'n 73) on NOTEQUIV
32: shift/reduce conflict (shift 153, red'n 73) on NUMEQ
32: shift/reduce conflict (shift 154, red'n 73) on NUMGE
32: shift/reduce conflict (shift 155, red'n 73) on NUMGT
32: shift/reduce conflict (shift 156, red'n 73) on NUMLE
32: shift/reduce conflict (shift 157, red'n 73) on NUMLT
32: shift/reduce conflict (shift 158, red'n 73) on NUMNE
state 32
	expr3 :  expr4_    (73)
	expr3 :  expr4_BAR expr3 
	expr4 :  expr4_op4 expr5 

	BAR  shift 145
	EQUIV  shift 159
	LEXEQ  shift 147
	LEXGE  shift 148
	LEXGT  shift 149
	LEXLE  shift 150
	LEXLT  shift 151
	LEXNE  shift 152
	NOTEQUIV  shift 160
	NUMEQ  shift 153
	NUMGE  shift 154
	NUMGT  shift 155
	NUMLE  shift 156
	NUMLT  shift 157
	NUMNE  shift 158
	.  reduce 73

	op4  goto 146

33: shift/reduce conflict (shift 162, red'n 75) on CONCAT
33: shift/reduce conflict (shift 163, red'n 75) on LCONCAT
state 33
	expr4 :  expr5_    (75)
	expr5 :  expr5_op5 expr6 

	CONCAT  shift 162
	LCONCAT  shift 163
	.  reduce 75

	op5  goto 161

34: shift/reduce conflict (shift 166, red'n 91) on DIFF
34: shift/reduce conflict (shift 168, red'n 91) on MINUS
34: shift/reduce conflict (shift 165, red'n 91) on PLUS
34: shift/reduce conflict (shift 167, red'n 91) on UNION
state 34
	expr5 :  expr6_    (91)
	expr6 :  expr6_op6 expr7 

	DIFF  shift 166
	MINUS  shift 168
	PLUS  shift 165
	UNION  shift 167
	.  reduce 91

	op6  goto 164

35: shift/reduce conflict (shift 171, red'n 95) on INTER
35: shift/reduce conflict (shift 173, red'n 95) on MOD
35: shift/reduce conflict (shift 172, red'n 95) on SLASH
35: shift/reduce conflict (shift 170, red'n 95) on STAR
state 35
	expr6 :  expr7_    (95)
	expr7 :  expr7_op7 expr8 

	INTER  shift 171
	MOD  shift 173
	SLASH  shift 172
	STAR  shift 170
	.  reduce 95

	op7  goto 169

state 36
	expr7 :  expr8_    (101)

	.  reduce 101


37: shift/reduce conflict (shift 176, red'n 107) on AT
37: shift/reduce conflict (shift 175, red'n 107) on BACKSLASH
37: shift/reduce conflict (shift 174, red'n 107) on CARET
state 37
	expr8 :  expr9_    (107)
	expr8 :  expr9_CARET expr8 
	expr9 :  expr9_BACKSLASH expr10 
	expr9 :  expr9_AT expr10 

	AT  shift 176
	BACKSLASH  shift 175
	CARET  shift 174
	.  reduce 107


state 38
	expr9 :  expr10_    (109)

	.  reduce 109


39: shift/reduce conflict (shift 180, red'n 112) on DOT
39: shift/reduce conflict (shift 178, red'n 112) on LBRACE
39: shift/reduce conflict (shift 177, red'n 112) on LBRACK
39: shift/reduce conflict (shift 179, red'n 112) on LPAREN
state 39
	expr10 :  expr11_    (112)
	expr11 :  expr11_LBRACK expr RBRACK 
	expr11 :  expr11_LBRACE $$159 exprlist $$160 RBRACE 
	expr11 :  expr11_LPAREN $$162 exprlist $$163 RPAREN 
	expr11 :  expr11_DOT IDENT 
	section :  expr11_LBRACK expr sectop expr RBRACK 

	DOT  shift 180
	LBRACE  shift 178
	LBRACK  shift 177
	LPAREN  shift 179
	.  reduce 112


state 40
	expr10 :  AT_expr10 

	CSETLIT  shift 85
	IDENT  shift 56
	INTLIT  shift 82
	REALLIT  shift 83
	STRINGLIT  shift 84
	BREAK  shift 58
	CASE  shift 90
	CREATE  shift 55
	EVERY  shift 93
	FAIL  shift 86
	IF  shift 89
	NEXT  shift 57
	NOT  shift 41
	REPEAT  shift 94
	RETURN  shift 87
	SUSPEND  shift 88
	UNTIL  shift 92
	WHILE  shift 91
	AT  shift 40
	BACKSLASH  shift 81
	BANG  shift 64
	BAR  shift 42
	CARET  shift 69
	CONCAT  shift 43
	CONJUNC  shift 62
	DIFF  shift 65
	DOT  shift 63
	EQUIV  shift 77
	INTER  shift 70
	LBRACE  shift 60
	LBRACK  shift 61
	LCONCAT  shift 44
	LEXEQ  shift 75
	LEXNE  shift 76
	LPAREN  shift 59
	MINUS  shift 72
	NOTEQUIV  shift 80
	NUMEQ  shift 73
	NUMNE  shift 74
	PLUS  shift 66
	QMARK  shift 79
	SLASH  shift 68
	STAR  shift 67
	TILDE  shift 71
	UNION  shift 78
	.  error

	expr10  goto 181
	expr11  goto 39
	op10  goto 45
	literal  goto 46
	section  goto 47
	return  goto 48
	if  goto 49
	case  goto 50
	while  goto 51
	until  goto 52
	every  goto 53
	repeat  goto 54

state 41
	expr10 :  NOT_expr10 

	CSETLIT  shift 85
	IDENT  shift 56
	INTLIT  shift 82
	REALLIT  shift 83
	STRINGLIT  shift 84
	BREAK  shift 58
	CASE  shift 90
	CREATE  shift 55
	EVERY  shift 93
	FAIL  shift 86
	IF  shift 89
	NEXT  shift 57
	NOT  shift 41
	REPEAT  shift 94
	RETURN  shift 87
	SUSPEND  shift 88
	UNTIL  shift 92
	WHILE  shift 91
	AT  shift 40
	BACKSLASH  shift 81
	BANG  shift 64
	BAR  shift 42
	CARET  shift 69
	CONCAT  shift 43
	CONJUNC  shift 62
	DIFF  shift 65
	DOT  shift 63
	EQUIV  shift 77
	INTER  shift 70
	LBRACE  shift 60
	LBRACK  shift 61
	LCONCAT  shift 44
	LEXEQ  shift 75
	LEXNE  shift 76
	LPAREN  shift 59
	MINUS  shift 72
	NOTEQUIV  shift 80
	NUMEQ  shift 73
	NUMNE  shift 74
	PLUS  shift 66
	QMARK  shift 79
	SLASH  shift 68
	STAR  shift 67
	TILDE  shift 71
	UNION  shift 78
	.  error

	expr10  goto 182
	expr11  goto 39
	op10  goto 45
	literal  goto 46
	section  goto 47
	return  goto 48
	if  goto 49
	case  goto 50
	while  goto 51
	until  goto 52
	every  goto 53
	repeat  goto 54

state 42
	expr10 :  BAR_expr10 

	CSETLIT  shift 85
	IDENT  shift 56
	INTLIT  shift 82
	REALLIT  shift 83
	STRINGLIT  shift 84
	BREAK  shift 58
	CASE  shift 90
	CREATE  shift 55
	EVERY  shift 93
	FAIL  shift 86
	IF  shift 89
	NEXT  shift 57
	NOT  shift 41
	REPEAT  shift 94
	RETURN  shift 87
	SUSPEND  shift 88
	UNTIL  shift 92
	WHILE  shift 91
	AT  shift 40
	BACKSLASH  shift 81
	BANG  shift 64
	BAR  shift 42
	CARET  shift 69
	CONCAT  shift 43
	CONJUNC  shift 62
	DIFF  shift 65
	DOT  shift 63
	EQUIV  shift 77
	INTER  shift 70
	LBRACE  shift 60
	LBRACK  shift 61
	LCONCAT  shift 44
	LEXEQ  shift 75
	LEXNE  shift 76
	LPAREN  shift 59
	MINUS  shift 72
	NOTEQUIV  shift 80
	NUMEQ  shift 73
	NUMNE  shift 74
	PLUS  shift 66
	QMARK  shift 79
	SLASH  shift 68
	STAR  shift 67
	TILDE  shift 71
	UNION  shift 78
	.  error

	expr10  goto 183
	expr11  goto 39
	op10  goto 45
	literal  goto 46
	section  goto 47
	return  goto 48
	if  goto 49
	case  goto 50
	while  goto 51
	until  goto 52
	every  goto 53
	repeat  goto 54

state 43
	expr10 :  CONCAT_expr10 

	CSETLIT  shift 85
	IDENT  shift 56
	INTLIT  shift 82
	REALLIT  shift 83
	STRINGLIT  shift 84
	BREAK  shift 58
	CASE  shift 90
	CREATE  shift 55
	EVERY  shift 93
	FAIL  shift 86
	IF  shift 89
	NEXT  shift 57
	NOT  shift 41
	REPEAT  shift 94
	RETURN  shift 87
	SUSPEND  shift 88
	UNTIL  shift 92
	WHILE  shift 91
	AT  shift 40
	BACKSLASH  shift 81
	BANG  shift 64
	BAR  shift 42
	CARET  shift 69
	CONCAT  shift 43
	CONJUNC  shift 62
	DIFF  shift 65
	DOT  shift 63
	EQUIV  shift 77
	INTER  shift 70
	LBRACE  shift 60
	LBRACK  shift 61
	LCONCAT  shift 44
	LEXEQ  shift 75
	LEXNE  shift 76
	LPAREN  shift 59
	MINUS  shift 72
	NOTEQUIV  shift 80
	NUMEQ  shift 73
	NUMNE  shift 74
	PLUS  shift 66
	QMARK  shift 79
	SLASH  shift 68
	STAR  shift 67
	TILDE  shift 71
	UNION  shift 78
	.  error

	expr10  goto 184
	expr11  goto 39
	op10  goto 45
	literal  goto 46
	section  goto 47
	return  goto 48
	if  goto 49
	case  goto 50
	while  goto 51
	until  goto 52
	every  goto 53
	repeat  goto 54

state 44
	expr10 :  LCONCAT_expr10 

	CSETLIT  shift 85
	IDENT  shift 56
	INTLIT  shift 82
	REALLIT  shift 83
	STRINGLIT  shift 84
	BREAK  shift 58
	CASE  shift 90
	CREATE  shift 55
	EVERY  shift 93
	FAIL  shift 86
	IF  shift 89
	NEXT  shift 57
	NOT  shift 41
	REPEAT  shift 94
	RETURN  shift 87
	SUSPEND  shift 88
	UNTIL  shift 92
	WHILE  shift 91
	AT  shift 40
	BACKSLASH  shift 81
	BANG  shift 64
	BAR  shift 42
	CARET  shift 69
	CONCAT  shift 43
	CONJUNC  shift 62
	DIFF  shift 65
	DOT  shift 63
	EQUIV  shift 77
	INTER  shift 70
	LBRACE  shift 60
	LBRACK  shift 61
	LCONCAT  shift 44
	LEXEQ  shift 75
	LEXNE  shift 76
	LPAREN  shift 59
	MINUS  shift 72
	NOTEQUIV  shift 80
	NUMEQ  shift 73
	NUMNE  shift 74
	PLUS  shift 66
	QMARK  shift 79
	SLASH  shift 68
	STAR  shift 67
	TILDE  shift 71
	UNION  shift 78
	.  error

	expr10  goto 185
	expr11  goto 39
	op10  goto 45
	literal  goto 46
	section  goto 47
	return  goto 48
	if  goto 49
	case  goto 50
	while  goto 51
	until  goto 52
	every  goto 53
	repeat  goto 54

state 45
	expr10 :  op10_expr10 

	CSETLIT  shift 85
	IDENT  shift 56
	INTLIT  shift 82
	REALLIT  shift 83
	STRINGLIT  shift 84
	BREAK  shift 58
	CASE  shift 90
	CREATE  shift 55
	EVERY  shift 93
	FAIL  shift 86
	IF  shift 89
	NEXT  shift 57
	NOT  shift 41
	REPEAT  shift 94
	RETURN  shift 87
	SUSPEND  shift 88
	UNTIL  shift 92
	WHILE  shift 91
	AT  shift 40
	BACKSLASH  shift 81
	BANG  shift 64
	BAR  shift 42
	CARET  shift 69
	CONCAT  shift 43
	CONJUNC  shift 62
	DIFF  shift 65
	DOT  shift 63
	EQUIV  shift 77
	INTER  shift 70
	LBRACE  shift 60
	LBRACK  shift 61
	LCONCAT  shift 44
	LEXEQ  shift 75
	LEXNE  shift 76
	LPAREN  shift 59
	MINUS  shift 72
	NOTEQUIV  shift 80
	NUMEQ  shift 73
	NUMNE  shift 74
	PLUS  shift 66
	QMARK  shift 79
	SLASH  shift 68
	STAR  shift 67
	TILDE  shift 71
	UNION  shift 78
	.  error

	expr10  goto 186
	expr11  goto 39
	op10  goto 45
	literal  goto 46
	section  goto 47
	return  goto 48
	if  goto 49
	case  goto 50
	while  goto 51
	until  goto 52
	every  goto 53
	repeat  goto 54

state 46
	expr11 :  literal_    (138)

	.  reduce 138


state 47
	expr11 :  section_    (139)

	.  reduce 139


state 48
	expr11 :  return_    (140)

	.  reduce 140


state 49
	expr11 :  if_    (141)

	.  reduce 141


state 50
	expr11 :  case_    (142)

	.  reduce 142


state 51
	expr11 :  while_    (143)

	.  reduce 143


state 52
	expr11 :  until_    (144)

	.  reduce 144


state 53
	expr11 :  every_    (145)

	.  reduce 145


state 54
	expr11 :  repeat_    (146)

	.  reduce 146


state 55
	expr11 :  CREATE_expr 

	error  shift 28
	CSETLIT  shift 85
	IDENT  shift 56
	INTLIT  shift 82
	REALLIT  shift 83
	STRINGLIT  shift 84
	BREAK  shift 58
	CASE  shift 90
	CREATE  shift 55
	EVERY  shift 93
	FAIL  shift 86
	IF  shift 89
	NEXT  shift 57
	NOT  shift 41
	REPEAT  shift 94
	RETURN  shift 87
	SUSPEND  shift 88
	UNTIL  shift 92
	WHILE  shift 91
	AT  shift 40
	BACKSLASH  shift 81
	BANG  shift 64
	BAR  shift 42
	CARET  shift 69
	CONCAT  shift 43
	CONJUNC  shift 62
	DIFF  shift 65
	DOT  shift 63
	EQUIV  shift 77
	INTER  shift 70
	LBRACE  shift 60
	LBRACK  shift 61
	LCONCAT  shift 44
	LEXEQ  shift 75
	LEXNE  shift 76
	LPAREN  shift 59
	MINUS  shift 72
	NOTEQUIV  shift 80
	NUMEQ  shift 73
	NUMNE  shift 74
	PLUS  shift 66
	QMARK  shift 79
	SLASH  shift 68
	STAR  shift 67
	TILDE  shift 71
	UNION  shift 78
	.  error

	expr  goto 187
	expr1a  goto 27
	expr1  goto 29
	expr2  goto 30
	expr3  goto 31
	expr4  goto 32
	expr5  goto 33
	expr6  goto 34
	expr7  goto 35
	expr8  goto 36
	expr9  goto 37
	expr10  goto 38
	expr11  goto 39
	op10  goto 45
	literal  goto 46
	section  goto 47
	return  goto 48
	if  goto 49
	case  goto 50
	while  goto 51
	until  goto 52
	every  goto 53
	repeat  goto 54

state 56
	expr11 :  IDENT_    (148)

	.  reduce 148


state 57
	expr11 :  NEXT_    (149)

	.  reduce 149


58: shift/reduce conflict (shift 40, red'n 29) on AT
58: shift/reduce conflict (shift 81, red'n 29) on BACKSLASH
58: shift/reduce conflict (shift 42, red'n 29) on BAR
58: shift/reduce conflict (shift 69, red'n 29) on CARET
58: shift/reduce conflict (shift 43, red'n 29) on CONCAT
58: shift/reduce conflict (shift 62, red'n 29) on CONJUNC
58: shift/reduce conflict (shift 65, red'n 29) on DIFF
58: shift/reduce conflict (shift 63, red'n 29) on DOT
58: shift/reduce conflict (shift 77, red'n 29) on EQUIV
58: shift/reduce conflict (shift 70, red'n 29) on INTER
58: shift/reduce conflict (shift 60, red'n 29) on LBRACE
58: shift/reduce conflict (shift 61, red'n 29) on LBRACK
58: shift/reduce conflict (shift 44, red'n 29) on LCONCAT
58: shift/reduce conflict (shift 75, red'n 29) on LEXEQ
58: shift/reduce conflict (shift 76, red'n 29) on LEXNE
58: shift/reduce conflict (shift 59, red'n 29) on LPAREN
58: shift/reduce conflict (shift 72, red'n 29) on MINUS
58: shift/reduce conflict (shift 80, red'n 29) on NOTEQUIV
58: shift/reduce conflict (shift 73, red'n 29) on NUMEQ
58: shift/reduce conflict (shift 74, red'n 29) on NUMNE
58: shift/reduce conflict (shift 66, red'n 29) on PLUS
58: shift/reduce conflict (shift 79, red'n 29) on QMARK
58: shift/reduce conflict (shift 68, red'n 29) on SLASH
58: shift/reduce conflict (shift 67, red'n 29) on STAR
58: shift/reduce conflict (shift 78, red'n 29) on UNION
state 58
	expr11 :  BREAK_nexpr 
	nexpr : _    (29)

	error  shift 28
	CSETLIT  shift 85
	IDENT  shift 56
	INTLIT  shift 82
	REALLIT  shift 83
	STRINGLIT  shift 84
	BREAK  shift 58
	CASE  shift 90
	CREATE  shift 55
	EVERY  shift 93
	FAIL  shift 86
	IF  shift 89
	NEXT  shift 57
	NOT  shift 41
	REPEAT  shift 94
	RETURN  shift 87
	SUSPEND  shift 88
	UNTIL  shift 92
	WHILE  shift 91
	AT  shift 40
	BACKSLASH  shift 81
	BANG  shift 64
	BAR  shift 42
	CARET  shift 69
	CONCAT  shift 43
	CONJUNC  shift 62
	DIFF  shift 65
	DOT  shift 63
	EQUIV  shift 77
	INTER  shift 70
	LBRACE  shift 60
	LBRACK  shift 61
	LCONCAT  shift 44
	LEXEQ  shift 75
	LEXNE  shift 76
	LPAREN  shift 59
	MINUS  shift 72
	NOTEQUIV  shift 80
	NUMEQ  shift 73
	NUMNE  shift 74
	PLUS  shift 66
	QMARK  shift 79
	SLASH  shift 68
	STAR  shift 67
	TILDE  shift 71
	UNION  shift 78
	.  reduce 29

	expr  goto 26
	nexpr  goto 188
	expr1a  goto 27
	expr1  goto 29
	expr2  goto 30
	expr3  goto 31
	expr4  goto 32
	expr5  goto 33
	expr6  goto 34
	expr7  goto 35
	expr8  goto 36
	expr9  goto 37
	expr10  goto 38
	expr11  goto 39
	op10  goto 45
	literal  goto 46
	section  goto 47
	return  goto 48
	if  goto 49
	case  goto 50
	while  goto 51
	until  goto 52
	every  goto 53
	repeat  goto 54

state 59
	expr11 :  LPAREN_$$151 exprlist $$152 RPAREN 
	$$151 : _    (151)

	.  reduce 151

	$$151  goto 189

state 60
	expr11 :  LBRACE_compound RBRACE 
	nexpr : _    (29)

	error  shift 28
	CSETLIT  shift 85
	IDENT  shift 56
	INTLIT  shift 82
	REALLIT  shift 83
	STRINGLIT  shift 84
	BREAK  shift 58
	CASE  shift 90
	CREATE  shift 55
	EVERY  shift 93
	FAIL  shift 86
	IF  shift 89
	NEXT  shift 57
	NOT  shift 41
	REPEAT  shift 94
	RETURN  shift 87
	SUSPEND  shift 88
	UNTIL  shift 92
	WHILE  shift 91
	AT  shift 40
	BACKSLASH  shift 81
	BANG  shift 64
	BAR  shift 42
	CARET  shift 69
	CONCAT  shift 43
	CONJUNC  shift 62
	DIFF  shift 65
	DOT  shift 63
	EQUIV  shift 77
	INTER  shift 70
	LBRACE  shift 60
	LBRACK  shift 61
	LCONCAT  shift 44
	LEXEQ  shift 75
	LEXNE  shift 76
	LPAREN  shift 59
	MINUS  shift 72
	NOTEQUIV  shift 80
	NUMEQ  shift 73
	NUMNE  shift 74
	PLUS  shift 66
	QMARK  shift 79
	SLASH  shift 68
	STAR  shift 67
	TILDE  shift 71
	UNION  shift 78
	.  reduce 29

	expr  goto 26
	nexpr  goto 191
	expr1a  goto 27
	expr1  goto 29
	expr2  goto 30
	expr3  goto 31
	expr4  goto 32
	expr5  goto 33
	expr6  goto 34
	expr7  goto 35
	expr8  goto 36
	expr9  goto 37
	expr10  goto 38
	expr11  goto 39
	op10  goto 45
	literal  goto 46
	section  goto 47
	return  goto 48
	if  goto 49
	case  goto 50
	while  goto 51
	until  goto 52
	every  goto 53
	repeat  goto 54
	compound  goto 190

state 61
	expr11 :  LBRACK_$$155 exprlist $$156 RBRACK 
	$$155 : _    (155)

	.  reduce 155

	$$155  goto 192

state 62
	expr11 :  CONJUNC_FAIL 
	expr11 :  CONJUNC_IDENT 

	IDENT  shift 194
	FAIL  shift 193
	.  error


state 63
	op10 :  DOT_    (119)

	.  reduce 119


state 64
	op10 :  BANG_    (120)

	.  reduce 120


state 65
	op10 :  DIFF_    (121)

	.  reduce 121


state 66
	op10 :  PLUS_    (122)

	.  reduce 122


state 67
	op10 :  STAR_    (123)

	.  reduce 123


state 68
	op10 :  SLASH_    (124)

	.  reduce 124


state 69
	op10 :  CARET_    (125)

	.  reduce 125


state 70
	op10 :  INTER_    (126)

	.  reduce 126


state 71
	op10 :  TILDE_    (127)

	.  reduce 127


state 72
	op10 :  MINUS_    (128)

	.  reduce 128


state 73
	op10 :  NUMEQ_    (129)

	.  reduce 129


state 74
	op10 :  NUMNE_    (130)

	.  reduce 130


state 75
	op10 :  LEXEQ_    (131)

	.  reduce 131


state 76
	op10 :  LEXNE_    (132)

	.  reduce 132


state 77
	op10 :  EQUIV_    (133)

	.  reduce 133


state 78
	op10 :  UNION_    (134)

	.  reduce 134


state 79
	op10 :  QMARK_    (135)

	.  reduce 135


state 80
	op10 :  NOTEQUIV_    (136)

	.  reduce 136


state 81
	op10 :  BACKSLASH_    (137)

	.  reduce 137


state 82
	literal :  INTLIT_    (187)

	.  reduce 187


state 83
	literal :  REALLIT_    (188)

	.  reduce 188


state 84
	literal :  STRINGLIT_    (189)

	.  reduce 189


state 85
	literal :  CSETLIT_    (190)

	.  reduce 190


state 86
	return :  FAIL_    (175)

	.  reduce 175

